Fixed the alignment in the display-pokemon class

--- a/src/style.css
+++ b/src/style.css
@@ -200,7 +200,7 @@ form {
   opacity: 0.8;
 }
 
-.pokemon-img {
+/*.pokemon-img {
   position: absolute;
   right: 0;
   left: 0;
@@ -210,6 +210,18 @@ form {
   object-fit: contain;
   max-width: 350px;
   max-height: 22vh;
+}*/
+
+/*.pokemon-img {
+  display: flex;
+  flex-direction: row;
+  max-width: 990px;
+  max-height: 22vh;
+}*/
+
+.display-pokemon img {
+  max-width: 520px;
+  max-height: 28vh;
 }
 
 .abilities {
@@ -241,9 +253,9 @@ form {
 
 .height-and-weight {
   display: flex;
-  justify-content: space-around;
-  gap: 50px;
-  margin-top: 30px;
+  justify-content: space-evenly;
+  gap: 10px;
+  margin-top: 20px;
 }
 
 .width {
@@ -263,7 +275,7 @@ form {
 }
 
 .abilities-container {
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .abilities-container h2 {
@@ -273,7 +285,7 @@ form {
 
 .ability-info {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .ability {
@@ -286,7 +298,7 @@ form {
 }
 
 .evolution-container {
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 .evolution-container h2 {
@@ -297,11 +309,14 @@ form {
 .evolution-pokemon-container {
   display: flex;
   margin-top: 20px;
+  justify-content: center;
 }
 
 .evolution-pokemon {
-  margin-left: 20px;
-  margin-right: 20px;
+  display: block;
+  margin: 0 auto;
+  margin-left: 25px;
+  margin-right: 30px;
   width: 70px;
   height: 70px;
   transition: transform 0.5s;
@@ -309,4 +324,10 @@ form {
 
 .evolution-pokemon:hover {
   transform: scale(1.1);
+}
+
+.wrapper {
+  display: block;
+  margin: -190px auto;
+  text-align: center;
 }
